# BetterUptime

./: Readme.md
api/: Cargo.toml
api/src/: inputs.rs  main.rs  outputs.rs  scheduler.rs
api/src/auth/: extractor.rs  health.rs  mod.rs  validation.rs
api/src/messaging/: email.rs  mod.rs
api/src/models/: notificaton.rs
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  Navbar.jsx
store/: Cargo.toml
store/migrations/2026-01-05-230715-0000_create-users_and_create-websites/: up.sql
store/migrations/2026-01-09-223955-0000_create_user_update_website/: up.sql
store/migrations/2026-02-18-044930-0000_notifications/: up.sql
store/src/: config.rs  lib.rs  models  schema.rs  store.rs
store/src/models/: mod.rs  user.rs  website.rs  website_ticks.rs
